sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: illegal start of simple pattern
      for(i<-0 to getNomebreValleurs(); i++)
                                           ^AlgBubbleSort1:10: error: illegal start of simple expression
        }
        ^AlgBubbleSort1:18: error: Unmatched closing brace '}' ignored here
}
^