sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  { 
   while(faitechange==true)
        faitechange=false
      for(i<-0 to getNomebreValleurs(); i++)
        if(plusPetit(i,i+1)
            {
                echange(i,i+1);
             }
        }
}
   


